--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -20,6 +20,6 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '17'
-
+        distribution: 'temurin'
     - name: Build with Gradle
       run: ./gradlew build
