--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -22,4 +22,4 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
     - name: Build with Gradle
-      run: ./gradlew build
+      run: build.gradle
